# helpers_G

./: .gitignore  Karan Shah One Pager 1.pptx  Neo4j-718d0eb6-Created-2025-12-04.txt  README.md  Rinky_Sharma_AMEX_GCP_DE 1.pptx  SDI_Account_Data.xlsx  aws-research.txt  routes.py
cc-new/: curls.txt  pyproject.toml
cc-new/app/: main.py
cc-new/app/api/: routes.py  schemas.py
cc-new/app/core/: config.py  logging.py  safety.py
cc-new/app/data/: mock_user_alex.json
cc-new/app/engine/: candidates.py  generator.py  normalize.py  ranking.py  signals.py
cc-new/app/llm/: anthropic.py  base.py  bedrock.py  openai.py  registry.py
cc-new/app/providers/: alphavantage.py  base.py  benzinga.py  connect_coach_stub.py  mt_newswire_stub.py  registry.py
content-concierge/: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
content-concierge/side_quest/: cust_1_and Cust_2.txt  data-cust_001  data-cust_002  insights_working.py  sql_db_queries.txt  utilities.txt
content-concierge/src/alembic/: env.py  script.py.mako
content-concierge/src/alembic/versions/: 0001_init.py  0002_insight_sessions.py
content-concierge/src/api/: deps.py  main.py
content-concierge/src/api/routes/: debug.py  insights.py  models.py  qa.py  users.py
content-concierge/src/content_concierge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
content-concierge/src/core/: guardrails.py
content-concierge/src/core/agent/: __init__.py  insights_flow.py  qa_flow.py  (+3 more)
content-concierge/src/observability/: logger.py
content-concierge/src/tests/: conftest.py
(+79 files in other folders)
